<resources>
    <string name="app_name">ScaffMate</string>
    <string name="search">Search Bar</string>
    <string name="search_bar_hint">Search Bar Hint</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="about_us"> The people behind ScaffMate are dedicated to meeting the needs of scaffolders around Australia and New Zealand by providing an application that gives the user all the required knowledge needed on a scaffold site at their fingertips.\n

\nOur promise is to keep the content and useability of ScaffMate up to date making sure we are continually meeting the needs of our users.\n

\nWe encourage users to help us in achieving excellence by emailing ScaffMate before leaving any negative feedback so we can improve our application.


    </string>
    <string name="overview2"><b>Overview</b></string>
    <string name="overview">
        \nScaffMate is a complete scaffolding guide which has been developed in reference with safe work Australia’s online material. This app is a broad overview of all things scaffolding with an emphasis on risk management.\n

\nMaterial set within this application can be used to assist in all stages of scaffolding work. Covering topics such as Planning, Scaffold Duties, Types of Scaffold, Erect and Dismantling of Scaffold and Inspections and Maintenance Procedures. This Scaffolding app is really the complete guide to scaffolding safely and efficiently.\n</string>
    <string name="overview3">In the navigation side menu, you can find the complete scaffolding guide which holds all the content available on this application. Below the Complete Scaffolding Guide are the supervisor, leading hand and scaffolder categories which display topics specific to the roles responsibilities.\n</string>
    <string name="overview4">The ‘about us’ menu, is a brief description of who we (the developer) are and what we aim to achieve with this application.\n</string>
<string name="overview5">And Last but not least the ‘Contact us’ menu, is a direct email for you to provide feedback to the developer. We also encourage you to film/photograph your own unique solutions to your scaffolding problems and send them in with a brief description of the problem and the solution (what scaffolding method was used to solve the problem). We will upload them to the app.\n

\nThank you for downloading this app and we look forward to hearing your feedback on how we can make this app better.\n

\nWe encourage users to help us in achieving excellence by emailing ScaffMate before leaving any negative feedback so we can improve our application.</string>
    <string name="b4_start_scaff_work1"><b>Choosing The Scaffold</b>\n
        A primary objective of scaffold planning and design is to prevent scaffold collapse before,
during and after placement of the scaffold. The collapse of a scaffold can cause death or
significant injury to workers or passers-by and damage to structures. \n

    \nManaging the risks associated with scaffolds and scaffolding work begins when you first
start making decisions about how scaffolds are going to be used at a workplace and what
type of scaffold will be best and safest for the job.</string>
     <string name="b4_start_scaff_work2"><b>Designing The Scaffold</b>\n
         The first step in controlling the identified risks should be at the design stage where the
focus is on eliminating risks through good design of:\n
\n<b>&#8226;  </b>scaffolding—the Act classifies these individual components as “plant”\n
\n<b>&#8226;  </b>the scaffold—the Act classifies this as a “structure” that is covered by both Parts 5 and
6 of the WHS Regulations, and\n
\n<b>&#8226;  </b>work systems and processes for the safe erection, alteration and dismantling of the scaffold.
     </string>
    <string name="b4_start_scaff_work3"><b>The Scaffolding Plant</b>\n
        Scaffolding designers have a duty to design scaffolding that is safe to manufacture,
assemble and use for the purpose it was designed for. They design the scaffolding system.
The scaffolding may be purchased, hired in or supplied, for example by a scaffolding
contractor.</string>
     <string name="b4_start_scaff_work4"><b>The Scaffold Structure</b>\n

         The scaffold designer will be responsible for selecting the appropriate scaffolding and
preparing a scaffold design for the job. They design the scaffold installation.
The scaffold designer should consider:\n
\n<b>&#8226;  </b>the intended use of the scaffold\n
\n<b>&#8226;  </b>hazards and risks for people who erect, dismantle, use or are near the scaffold\n
\n<b>&#8226;  </b>the foundations including ground conditions\n
\n<b>&#8226;  </b>the load bearing capacity of the surface where the scaffold is to be erected or the
suspension systems for hung or suspended scaffolds\n
\n<b>&#8226;  </b>dead loads e.g. resulting from the size and weight of the scaffold\n
\n<b>&#8226;  </b>live loads e.g. workers, plant and material on the scaffold\n
\n<b>&#8226;  </b>environmental loads e.g. wind loads\n
\n<b>&#8226;  </b>bracing, tying and anchors—where anchors will be placed on the supporting structure
and types of anchors to be used\n
\n<b>&#8226;  </b>supporting structures\n
\n<b>&#8226;  </b>edge protection\n
\n<b>&#8226;  </b>protection against falls and falling objects\n
\n<b>&#8226;  </b>containment sheeting, and\n
\n<b>&#8226;  </b>safe entry and exit.\n

\nWhere necessary, improved scaffold stability may be achieved by:\n

\n<b>&#8226;  </b>tying the scaffold to a supporting structure\n
\n<b>&#8226;  </b>guying to a supporting structure\n
\n<b>&#8226;  </b>increasing the dead load by securely attaching counterweights near the base, and\n
\n<b>&#8226;  </b>adding bays to increase the base dimension.\n

\nScaffolds should be designed by a competent person, for example a person holding a
relevant scaffolding high risk work licence.
     </string>
    <string name="b4_start_scaff_work5"><b>The System of Work</b>\n
        Systems of work should be clear but flexible to meet changing circumstances as the work
progresses. The system of work should provide for the assessment and control of any new
risks arising from proposed changes to the work before they are implemented.\n

\nA documented safe system of work is an administrative control. For scaffolding work this
could include consideration of:\n

\n<b>&#8226;  </b>worker competency and licensing requirements\n
\n<b>&#8226;  </b>consultation and coordination of the work with others\n
\n<b>&#8226;  </b>access and exit\n
\n<b>&#8226;  </b>exclusion zones\n
\n<b>&#8226;  </b>permit-to-work systems\n
\n<b>&#8226;  </b>fall arrest systems\n
\n<b>&#8226;  </b>inspection and maintenance\n
\n<b>&#8226;  </b>emergency arrangements, and\n
\n<b>&#8226;  </b>changes to the work arrangements.\n

        \n© Commonwealth of Australia 2014.
    </string>
    <string name="tower_mobile1">

        \n<b>Tower and Mobile Scaffolds</b>\n

A tower scaffold is an independent scaffold
consisting of four vertical standards
connected longitudinally and transversely
or two frames in plan connected
transversely to create a scaffold of one bay.
It may also have an extra, short stabiliser
bay or outriggers to increase stability.\n

\nA mobile scaffold is a tower scaffold
mounted on wheels.\n

    </string>
     <string name="tower_mobile2">

       Manufacturers and suppliers must provide
information about how to use and erect
mobile scaffolds safely. If a scaffold is to
be altered contact the manufacturer or
supplier for guidance. Prefabricated mobile
scaffolds should be erected in accordance
with manufacturer’s specifications.\n

\n<b>When do I need a high
risk work licence?</b>\n

A licensed scaffolder is required
for the erection, alteration or dismantling of
a tower or mobile scaffold where there is a
risk that a person or object could fall more
than 4 metres from the platform or the
structure.
This means that if a scaffold that is less than
4 metres in height is located adjacent to, for
example an excavation, a licensed scaffolder
may still be required.

    </string>
     <string name="tower_mobile3">

Often tower and mobile scaffolds will not
require a licensed scaffolder to erect or
dismantle them as there is no risk of a fall
greater than 4 metres. However, the work
should still be carried out by a competent
person.\n

\n<b>Control Measures</b>\n

The following control measures should be
considered for tower and mobile scaffolds:\n

\n<b>•</b> Construct a tower scaffold with
modular, frame or tube and coupler
scaffolding.\n

\n<b>•</b> Locate a scaffold on firm level ground
with the feet or wheels properly
supported. Do not use loose bricks or
building blocks to take the weight of
the scaffold. Where adjustable wheels
are used, the slope of the surface
should not exceed 5 degrees.\n

\n<b>•</b> The height of the scaffold—from the
bottom of the scaffold to the platform
surface—should be no greater than the
multiple of the minimum base dimension
as specified in the manufacturer, supplier
or designer information.\n

\n<b>•</b> Reduce the height to base ratios or
provide extra support if the scaffold
will be:\n

\n<b>(a)</b> sheeted or likely to be exposed
to strong winds
\n<b>(b)</b> loaded with heavy equipment
or materials
\n<b>(c)</b> used to hoist heavy materials
or support rubbish chutes, and
\n<b>(d)</b> used for operations involving heavy
or awkward equipment e.g. grit
blasting or water-jetting.\n

\n<b>•</b> Use a secure internal ladder with a
protected opening e.g. a hinged trap
door for entry and exit to and from
the scaffold.\n

\n<b>•</b> The internal ladder should be free
of the supporting surface.\n

\n<b>•</b> Select the correct size and capacity
wheels to support the total mass of
the dead and live loads of the scaffold.\n

\n<b>•</b> Use wheels that have the working
load limit (WLL) clearly marked.\n

\n<b>•</b> Wheels should be locked before
erection continues.\n

\n<b>•</b> Wheels with adjustable legs should be
used and adjusted to keep the platform
level when the supporting structure is
at uneven or different heights.\n

\n<b>•</b> Include plan bracing at the base of
mobile scaffolds to provide greater
stability.\n

\n<b>•</b> Install guardrails, mid-rails and
toeboards on working platforms.

         \n<b>•</b> Keep wheel brakes locked at all times
unless moving the scaffold.\n

\nWork should not be done from tower or
mobile scaffolds located on balconies or
raised areas unless the scaffold is stable
and secure or fixed to the structure to
prevent movement.\n

\n<b>Moving a scaffold</b>\n

Before moving or relocating
a scaffold check:\n

\n<b>•</b>  there are no people or materials on
the scaffold\n

\n<b>•</b>  there are no overhead electric lines
or other overhead obstructions in the
line of travel\n

\n<b>•</b>  the ground is firm, level and there are
no obstructions—contact with a small
obstruction can cause a mobile scaffold
to overturn, and\n

\n<b>•</b>  that electrical equipment and leads
cannot become tangled with the
scaffold.\n

\nNever move the scaffold in windy
conditions.\n

\nScaffolds with components that are not
permanently fixed or which are not rated
for lifting should only be moved in frames
designed to lift individual components
e.g. stillage’s.\n

\nIf lifting a scaffold by crane, prepare a lifting
plan outlining safe lifting points and how
loose components like base jacks should
be secured. Sling the scaffold at the point
most likely to maintain stability and prevent
dislodgment of scaffolding components.\n

\nThe load should be slung by a licensed
dogger or rigger and manoeuvred in a
way that ensures the load remains stable.\n

\nA crane should not be used to lift
aluminium mobile scaffolds because
the scaffolding components may fail.\n

         \n© Commonwealth of Australia 2014.

    </string>
</resources>