<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff"
    android:orientation="vertical"
    android:paddingTop="60sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ffffff">

        <LinearLayout
            style="@style/TextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/DescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_horizontal"
                android:background="#00ffffff"
                android:text="@string/b4_start_scaff_work1" />


            <TextView
                style="@style/DescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_horizontal"
                android:text="@string/b4_start_scaff_work2" />

            <TextView
                style="@style/DescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_horizontal"
                android:text="@string/b4_start_scaff_work3" />

            <TextView
                style="@style/DescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_horizontal"
                android:text="@string/b4_start_scaff_work4" />

            <TextView
                style="@style/DescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_horizontal"
                android:text="@string/b4_start_scaff_work5" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>