<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="60sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#00ffffff">

        <LinearLayout
            style="@style/TextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:orientation="vertical">

            <TextView
                style="@style/DescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tower_mobile1" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:paddingBottom="10sp"
                android:src="@drawable/tower_mobile" />

            <TextView
                style="@style/DescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tower_mobile2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:paddingBottom="10sp"
                android:src="@drawable/tower_mobile2" />

            <TextView
                style="@style/DescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tower_mobile3" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>